--- a/login.html
+++ b/login.html
@@ -306,7 +306,7 @@
 
         // Fungsi untuk menentukan base URL API
 function determineApiBaseUrl() {
-    return "https://91.99.163.28:8080"; 
+    return "http://91.99.163.28:8080"; 
 }
 
         // Fungsi untuk mengambil konfigurasi dari server
