--- a/login.html
+++ b/login.html
@@ -416,7 +416,7 @@
 
         // Fungsi untuk menentukan base URL API
         function determineApiBaseUrl() {
-            return "http://91.99.163.28:8080"; 
+            return "https://91.99.163.28:8080"; 
         }
 
         // Fungsi untuk mengambil konfigurasi dari server
