--- a/dashboard.html
+++ b/dashboard.html
@@ -704,7 +704,7 @@
                     
                     <!-- Riwayat Transaksi -->
                     <div class="section-title">
-                        <h2><i class="fas fa-list-alt"></i> Riwayat Transaksi</h2>
+                        <h2><i class="fas fa-list-alt"></i> Stream Transaksi</h2>
                         <button class="btn btn-primary" onclick="refreshTransactions()">
                             <i class="fas fa-sync-alt"></i> Refresh
                         </button>
