--- a/login.html
+++ b/login.html
@@ -388,13 +388,13 @@
   <script>
     // Konfigurasi Firebase - SESUAIKAN DENGAN PROJECT ANDA
     const firebaseConfig = {
-      apiKey: "AIzaSyBtXSzdZHbL_WhUb5Zzc-cbKvEIl5BXGAE", // Ganti dengan API key Anda
+      apiKey: "AIzaSyDtZxsl5LZp3n1KZJfdVAdqQj22ZBPoQbU", // Ganti dengan API key Anda
       authDomain: "steady-fin-368617.firebaseapp.com",
       databaseURL: "https://steady-fin-368617-default-rtdb.firebaseio.com",
       projectId: "steady-fin-368617",
-      storageBucket: "steady-fin-368617.appspot.com",
-      messagingSenderId: "123456789", // Ganti dengan sender ID Anda
-      appId: "1:123456789:web:abcdef123456" // Ganti dengan app ID Anda
+      storageBucket: "steady-fin-368617.firebasestorage.app",
+      messagingSenderId: "626971902484", // Ganti dengan sender ID Anda
+      appId: "1:626971902484:web:98f7cdbd55c5990dfe9d01" // Ganti dengan app ID Anda
     };
 
     // Inisialisasi Firebase
