--- a/login.html
+++ b/login.html
@@ -389,14 +389,15 @@
   <script>
     // Konfigurasi Firebase - SESUAIKAN DENGAN PROJECT ANDA
     const firebaseConfig = {
-      apiKey: "AIzaSyB1d5p1Pq4cL9V7Y8q8Z5X7b6JkLmN0oPq", // Ganti dengan API key Anda
-      authDomain: "steady-fin-368617.firebaseapp.com",
-      databaseURL: "https://steady-fin-368617-default-rtdb.firebaseio.com",
-      projectId: "steady-fin-368617",
-      storageBucket: "steady-fin-368617.appspot.com",
-      messagingSenderId: "123456789", // Ganti dengan sender ID Anda
-      appId: "1:123456789:web:abcdef123456" // Ganti dengan app ID Anda
-    };
+  apiKey: "AIzaSyDtZxsl5LZp3n1KZJfdVAdqQj22ZBPoQbU",
+  authDomain: "steady-fin-368617.firebaseapp.com",
+  databaseURL: "https://steady-fin-368617-default-rtdb.firebaseio.com",
+  projectId: "steady-fin-368617",
+  storageBucket: "steady-fin-368617.firebasestorage.app",
+  messagingSenderId: "626971902484",
+  appId: "1:626971902484:web:98f7cdbd55c5990dfe9d01",
+  measurementId: "G-70D3LR995Y"
+};
 
     // Inisialisasi Firebase
     firebase.initializeApp(firebaseConfig);
