--- a/login.html
+++ b/login.html
@@ -333,13 +333,13 @@
     <form id="loginForm" autocomplete="off" aria-label="Form login admin">
       <div class="form-group">
         <label for="email">Email</label>
-        <input id="email" type="email" placeholder="masukkan email admin" required autocomplete="email" />
+        <input id="email" type="email" placeholder="Email" required autocomplete="email" />
       </div>
 
       <div class="form-group">
         <label for="password">Password</label>
         <div class="password-container">
-          <input id="password" type="password" placeholder="masukkan password" required autocomplete="current-password" />
+          <input id="password" type="password" placeholder="Password" required autocomplete="current-password" />
           <button type="button" id="togglePassword" class="toggle-password" aria-label="Tampilkan password">
             <i class="fas fa-eye"></i>
           </button>
@@ -371,13 +371,8 @@
         </button>
       </div>
 
-      <div class="hint">
-        <strong>Email admin:</strong> <code>aspaypulsa@gmail.com</code><br>
-        <strong>Password:</strong> <code>123456</code>
-      </div>
-
       <footer>
-        <small>&copy; 2023 ASIA PAYMENT - Admin Console</small>
+        <small>&copy; 2025 ASIA PAYMENT - Admin Console</small>
       </footer>
     </form>
   </div>
