--- a/index.html
+++ b/index.html
@@ -754,12 +754,12 @@
         auth = firebase.auth();
         database = firebase.database();
         firebaseConnected = true;
-        updateFirebaseStatus('Terhubung ke Firebase', 'connected');
+        updateFirebaseStatus('Terhubung', 'connected');
         console.log('Firebase initialized successfully');
     } catch (error) {
         console.error('Firebase initialization error:', error);
         firebaseConnected = false;
-        updateFirebaseStatus('Tidak terhubung ke Firebase - Menggunakan data simulasi', 'disconnected');
+        updateFirebaseStatus('Tidak terhubung - Menggunakan data simulasi', 'disconnected');
     }
     
     // Global variables
