--- a/menus.html
+++ b/menus.html
@@ -828,11 +828,11 @@
             auth = firebase.auth();
             database = firebase.database();
             firebaseConnected = true;
-            updateFirebaseStatus('Terhubung ke Firebase', 'connected');
+            updateFirebaseStatus('Terhubung', 'connected');
         } catch (error) {
             console.error('Firebase initialization error:', error);
             firebaseConnected = false;
-            updateFirebaseStatus('Tidak terhubung ke Firebase - Menggunakan data simulasi', 'disconnected');
+            updateFirebaseStatus('Tidak terhubung - Menggunakan data simulasi', 'disconnected');
         }
         
         // Global variables
