--- a/dashboard.html
+++ b/dashboard.html
@@ -783,7 +783,7 @@
             auth = firebase.auth();
             database = firebase.database();
             firebaseConnected = true;
-            updateFirebaseStatus('Terhubung ke Firebase - Mode Manual', 'connected');
+            updateFirebaseStatus('Terhubung', 'connected');
         } catch (error) {
             console.error('Firebase initialization error:', error);
             firebaseConnected = false;
