--- a/dashboard.html
+++ b/dashboard.html
@@ -664,7 +664,7 @@
                     <!-- Manual Data Info -->
                     <div class="manual-info">
                         <i class="fas fa-info-circle"></i>
-                        <span>Data diperbarui manual. Pilih tanggal atau periode untuk melihat statistik.</span>
+                        <span>Pilih tanggal atau periode untuk melihat statistik.</span>
                     </div>
                     
                     <!-- Date Filter Section -->
